# KONIVRER

./: .env  .env.example  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.security-only.json  .eslintrc.security.js  .eslintrc.security.json  .eslintrc.security.ts  .eslintrc.ts  .gitattributes  .gitignore  .imgbotconfig  .lintstagedrc.json  .mailmap  .npmrc  .prettierignore  .prettierrc.json  .replit  .secrets.baseline  .semgrep-ai-rules.yml  .vercelignore  .xatarc  100_PERCENT_TYPESCRIPT_ACHIEVEMENT.md  404.html  ACCESSIBILITY_IMPROVEMENTS.md  ADVANCED_ANALYTICS_GUIDE.md  ADVANCED_FEATURES_DOCUMENTATION.md  ADVANCED_MATCHMAKING_GUIDE.md  AI_INTEGRATION_REPORT.md  AI_INTEGRATION_SCREENSHOT_SUMMARY.md  AI_RECORDER_GUIDE.md  AI_RECORDER_IMPLEMENTATION_SUMMARY.md  AI_SECURITY_GUIDE.md  AI_SYSTEM_SUMMARY.md  ALCHEMICAL_SYMBOLS_UPDATE.md  ALL_BRANCHES_MERGED_COMPLETE.md  ANALYTICS_DOCUMENTATION.md  ANALYTICS_TROUBLESHOOTING.md  AUTOMATION_FIX.md  (+326 more)
.continue /: Config.json
.devcontainer/: devcontainer.json
.github/: Amplify.yaml  DEPENDABOT_AUTO_MERGE.md  SELF_HEALING.md  auto-assign.yml  dependabot.yml  labeler.yml  merge-rules.yaml  self-healing-config.json
.husky/: pre-commit
.lighthouseci/: flags-1ca01319-7d52-4404-bd30-b65a5fa17c20.json
.openhands/: config.json
.zap/: rules.tsv
Backend/: .env.example  DEPLOYMENT.md  README.md  package-lock.json  package.json  render.yaml  server.js  test-server.js
ai-logs/: ai-development-summary.md  ai-metrics.json  session-ai-1751663768123-i5qqm5.json  session-ai-1751663850147-0umcqz.json
api/: README.md  _xata.ts  (+6 more)
(+2034 files in other folders)
